Fix workflow: add contents write permission for push

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -9,6 +9,9 @@ on:
       - "streamio_notifications/**"
       - "!streamio_notifications/config.yaml"
 
+permissions:
+  contents: write
+
 jobs:
   bump:
     runs-on: ubuntu-latest
