--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - "streamio_notifications/**"
       - "!streamio_notifications/config.yaml"
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -15,7 +16,7 @@ permissions:
 jobs:
   bump:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "github.event_name == 'workflow_dispatch' || !contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v4
         with:
