--- a/streamio_notifications/Dockerfile
+++ b/streamio_notifications/Dockerfile
@@ -1,4 +1,4 @@
-ARG BUILD_FROM
+ARG BUILD_FROM=ghcr.io/home-assistant/amd64-base:3.19
 FROM ${BUILD_FROM}
 
 RUN apk add --no-cache python3 py3-pip
@@ -7,7 +7,4 @@ COPY app /app
 
 RUN pip3 install --no-cache-dir --break-system-packages -r /app/requirements.txt
 
-COPY run.sh /
-RUN chmod a+x /run.sh
-
-CMD [ "/run.sh" ]
+COPY rootfs /
