Fix s6-overlay: correct shebang, init false, LF line endings, v3 finish script

--- a/streamio_notifications/config.yaml
+++ b/streamio_notifications/config.yaml
@@ -2,6 +2,7 @@ name: "Stremio Notifications"
 description: "Track your Stremio library and get notified of new releases via Home Assistant calendar events"
 version: "1.0.3"
 slug: "streamio_notifications"
+init: false
 url: "https://github.com/djodjo02130/StremioNotifications"
 arch:
   - aarch64
